# Beginning_STM32

./: .gitginore  .gitignore
01_uart/: CMakeLists.txt  build.sh
01_uart/includes/: FreeRTOSConfig.h
01_uart/src/: CMakeLists.txt  main.c  uart_hal.c  uart_hal.h
01_uart/usartlib/: usart_utils.c  usart_utils.h
02_usb/: CMakeLists.txt  flash.sh
02_usb/src/: CMakeLists.txt  main.c  usbcdc.c  usbcdc.h
BookSources/rtos/: .gitignore
